
add_subdirectory(client)

add_subdirectory(concurrent_client)
add_subdirectory(concurrent_server)

add_subdirectory(debug_assistant)

add_subdirectory(echo_client)
add_subdirectory(echo_server)

add_subdirectory(file_client)
# add_subdirectory(file_server)

add_subdirectory(pingpong_client)
add_subdirectory(pingpong_server)

add_subdirectory(socket_management)

add_subdirectory(ssl_test)
add_subdirectory(ssl_websocket_test)

# add_subdirectory(udp_test)

# add_subdirectory(unix_socket)

add_subdirectory(unix_udp_test)

add_subdirectory(websocket_test)
